added all changes

--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -109,3 +109,17 @@ body{
 //     z-index: 9999;
 //     transform: rotateZ(180deg);
 // }
+
+
+
+
+
+// img.hero-pattern{
+//   position: absolute;
+//   top: 80px;
+//   right: 80px;
+//   z-index: 999;
+//   width: 29%;
+//   height: auto;
+//   opacity: 0.2;
+// }
