--- a/style/components/_services-section.scss
+++ b/style/components/_services-section.scss
@@ -198,7 +198,21 @@ section#services{
                 height: 264px;
                 margin-right: 0px;
             }
-           
+            @media only screen and (max-width: 450px) {
+                width: 300px;
+                height: 300px;
+                
+            }
+            @media only screen and (max-width: 360px) {
+                width: 260px;
+                height: 260px;
+                
+            }
+            @media only screen and (max-width: 320px) {
+                width: 230px;
+                height: 230px;
+                
+            }
         }
         div.service__info{
             display: flex;
