--- a/style/components/_hero-section.scss
+++ b/style/components/_hero-section.scss
@@ -127,6 +127,7 @@ main{
                 
             }
             p{
+                // font-family: $font-family-2;
                 line-height: 30px;
                 width: 79%;
                 text-align: left;
@@ -162,8 +163,8 @@ main{
                 text-decoration: none;
                 color: $primary-background;
                 background-color: $main-magenta;
-                font-weight: 500;
-                font-family: $font-family-2;
+                font-weight: 400;
+                font-family: $font-family-1;
                 font-size: $paragraph-font-size-2;
                 height: 40px;
                 width: 200px;
