--- a/style/components/_projects-section.scss
+++ b/style/components/_projects-section.scss
@@ -105,7 +105,8 @@ main{
             }
         article.project{
             width: 300px;
-            height: auto;
+            // height: auto;
+            height: 204px;
             // box-shadow: $card-box-shadow;
             box-shadow: 1px 25px 25px -5px rgba(57, 19, 184, 0.05);
             // background-color: $main-blue;
@@ -117,36 +118,41 @@ main{
             overflow: hidden;
             position: relative;
             transition: all .3s ease;
-
+            
             // &:not(:last-child){
-            //     margin-right: 60px;
-            // }
+                //     margin-right: 60px;
+                // }
             @media only screen and (max-width: 1550px) {
                 width: 360px;
-                
+                height: 244.8px;
             }
             @media only screen and (max-width: 900px) {
-                width: 300px;
-                
-            }
-            @media only screen and (max-width: 800px) {
+                    width: 300px;
+                    height: 204px;
+                }
+                @media only screen and (max-width: 800px) {
                 width: 260px;
+                height: 176.8px;
                 
             }
             @media only screen and (max-width: 700px) {
                 width: 360px;
+                height: 244.8px;
                 
             }
             @media only screen and (max-width: 450px) {
                 width: 300px;
+                height: 204px;
                 
             }
             @media only screen and (max-width: 360px) {
                 width: 260px;
+                height: 176.8px;
                 
             }
             @media only screen and (max-width: 320px) {
                 width: 230px;
+                height: 156.4px;
                 
             }
             
@@ -159,7 +165,9 @@ main{
     
             img.project__image {
                 width: 100%;
-                height: auto;
+                // height: auto;
+                height: 100%;
+                object-fit: cover;
                 // opacity: .96;
                 // margin-right: 30px;
                 
